upload user picture added
